# DFS

./: .gitignore  Cargo.toml  RESEARCH.md  build.rs
chunk-server/: Cargo.toml
chunk-server/configuration/: base.yml
chunk-server/src/: client.rs  config.rs  main.rs  storage.rs
chunk-server/src/server/: client_service.rs  master_service.rs  mod.rs
common/: Cargo.toml  build.rs
common/proto/: chunk_server.proto  client.proto  master_server.proto  shared.proto
common/src/: lib.rs
dfs-client/: Cargo.toml
dfs-client/src/: config.rs  main.rs
master-server/: Cargo.toml
master-server/configuration/: base.yml
master-server/src/: config.rs  main.rs  medatada.rs  operation_log.rs
master-server/src/server/: chunk_service.rs  client_service.rs  mod.rs
master-server/src/storage/: metadata.rs  mod.rs  namespace.rs
proto/: dfs.proto
