[package]
name = "chunk-server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
prost = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
common = { path = "../common" }
tokio-stream = { version = "0.1.5", features = ["net"] }

# dfs = { path = "../proto", version = "0.1.0" }

[build-dependencies]
tonic-build = "0.11.0"
