[package]
name = "chunk-server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
prost = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
tokio-stream = { version = "0.1.5", features = ["net"] }
config = "0.14.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }

common = { path = "../common" }

[build-dependencies]
tonic-build = "0.11.0"
