[package]
name = "master-server"
version = "0.1.0"
edition = "2021"
# build = "../build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.0", features = ["full"] }
prost = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14.0"

common = { path = "../common" }

[build-dependencies]
tonic-build = "0.11.0"
